--- a/css/card.css
+++ b/css/card.css
@@ -9,3 +9,22 @@
   background-color: #d3d3d3;
   padding: 2px 10px;
 }
+
+.card-bs .name {
+  font-size: 1.3em;
+  font-weight: bold; 
+  color: #3f51b5;
+  flex: 3;
+}
+
+.card-bs .stars,
+.card-bs .forks {
+  flex: 1;
+  text-align: right;
+  font-size: .9em;
+  color: #666;
+}
+
+.cadrd-bs .body {
+  padding: 2px 10px;
+}
