--- a/css/style.css
+++ b/css/style.css
@@ -45,8 +45,8 @@ body {
 	margin-bottom:5px; 
 }
 
-.table_container {
-	margin-top:40px; 
+.page_container {
+	margin-top:20px; 
 	margin-left:5px; 
 	margin-right:5px; 
 	margin-bottom:auto; 
