--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,13 @@ body {
 	text-align: center;
 }
 
+.frameless{
+    border-style:none none none none;
+    background-color:transparent;
+    width: 90%;
+	font-family: Monospace, Courier New, sans-serif;
+}
+
 .login_icon { 
 	position:absolute;
 	width:185px;
@@ -53,6 +60,20 @@ body {
 	border: 1px solid 000000; 
 }
 
+.sub_page_container {
+	margin-left:5px; 
+	margin-right:5px; 
+	margin-bottom:auto; 
+	border: 1px solid 000000; 
+}
+
+.btn_small{
+	width:90px;
+	height:32px;
+	top:1px;
+	left:1px;
+}
+
 .tab_form {
 	margin-top:20px; 
 	margin-left:5px; 
@@ -90,6 +111,10 @@ body {
 
 .part_list_style{
 	width: 200px;
+}
+
+.serial_list_style{
+	width: 100px;
 }
 
 .supplier_list_style{
